# jlcpcb-to-parquet

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: main.rs  parse_capacitance.rs  parse_current.rs  parse_inductance.rs  parse_resistance.rs  parse_voltage.rs
src/categories/: category_models.rs  category_to_parquet.rs  mod.rs
