[package]
name = "jlcpcb-to-parquet"
version = "0.3.0"
edition = "2021"
authors = ["Thomas Vijverberg<thomas@vijverb.nl>"]
description = "A tool to convert JLCPCB Parts Library to Parquet"
homepage = "https://github.com/tvijverb/jlcpcb-to-parquet"
repository = "https://github.com/tvijverb/jlcpcb-to-parquet"
license = "MIT"
readme = "README.md"

[dependencies]
polars = { version = "0.37.0", features = ["parquet", "lazy", "object", "streaming"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.36.0", features = ["full"] }
